--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../static/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     {% if current_user.is_authenticated %}
-    <h1>Olá, {{current_user.nome}}!</h1>
+    <h1>Olá, {{current_user.nome.split()[0]}}!</h1>
     {% else %}
     <h1>Olá, Visitante!</h1>
     {% endif %}
