Adição de Padrão

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,7 +24,10 @@
                 <button type="submit">Sign In</button>
                 <div class="forgot-password">
                     <span>Não tem uma conta? </span>
-                    <a href="http://127.0.0.1:5000/register" class="register-link">Cadastre-se</a>
+                    <a href="http://127.0.0.1:5000/register" class="register-link">Cadastre-se</a><br>
+                    <span>ou</span><br>
+                    <span>Continue como</span>
+                    <a href="http://127.0.0.1:5000/" class="register-link">Visitante</a>
                 </div>
             </form>
         </div>
