--- a/app/static/home.css
+++ b/app/static/home.css
@@ -104,7 +104,6 @@ body {
 
 
 .user-icon {
-    margin-left: 5rem;
     color: #000000;
     font-size: 2rem;
     cursor: pointer;
@@ -112,14 +111,154 @@ body {
     display: flex;
     align-items: center;
 }
-
-
+  
+  
 .user-icon i {
     font-size: inherit;
 }
-
-
+  
+  
 .user-icon:hover {
+    color: #6028be;
+}
+  
+  
+.user-menu {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+  
+  
+.dropdown-menu {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    width: 280px;
+    height: 100vh;
+    background: #18141d;
+    box-shadow: -2px 0 10px rgba(0, 0, 0, 0.3);
+    transition: right 0.3s ease;
+    z-index: 1001;
+}
+  
+  
+.dropdown-menu.active {
+    right: 0;
+}
+  
+  
+.user-header {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    border-bottom: 1px solid #2d2d2d;
+}
+  
+  
+.user-header i {
+    font-size: 2rem;
+    color: #fff;
+  
+    cynergy\assets\css\dashboard.css .product-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+  
+    .product-container img {
+        max-height: 500px;
+        width: auto;
+        object-fit: contain;
+    }
+  
+    .swiper-slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+  
+  
+.user-info {
+    flex: 1;
+}
+  
+  
+.user-info span {
+    display: block;
+    color: #fff;
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+  
+  
+.edit-profile {
+    color: #a8a8a8;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+  
+  
+.close-btn {
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.2rem;
+    padding: 5px;
+}
+  
+  
+.menu-options {
+    padding: 20px;
+}
+  
+  
+.menu-options a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #fff;
+    text-decoration: none;
+    padding: 12px;
+    transition: background 0.2s;
+}
+  
+  
+.menu-options a:hover {
+    background: #2d2d2d;
+}
+  
+  
+.menu-options i {
+    font-size: 1.2rem;
+}
+  
+.menu-options #sair:hover {
+    color: rgb(238, 70, 70);
+}
+  
+  
+.bag-icon {
+    margin-left: 1.5rem;
+    color: #000000;
+    font-size: 2rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+  
+  
+.bag-icon i {
+    font-size: inherit;
+}
+  
+  
+.bag-icon:hover {
     color: #6028be;
 }
 
