--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -30,12 +30,12 @@
 
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="http://127.0.0.1:5000/#section2">Produtos</a></li>
-                    <li><a href="http://127.0.0.1:5000/shop" class="cart-link">
+                    <li><a href="/#section2">Produtos</a></li>
+                    <li><a href="/shop" class="cart-link">
                             Comprar
                             <i class="fi fi-rr-shopping-cart"></i>
                         </a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="/sobre">Empresa</a></li>
                 </ul>
             </nav>
 
@@ -57,7 +57,7 @@
                     </div>
                     <div class="menu-options">
                         <a href="#"><i class="fi fi-sr-settings"></i> Configurações</a>
-                        <a href="http://127.0.0.1:5000/logout" id="sair"><i class="fi fi-sr-sign-out"></i> Sair</a>
+                        <a href="http://127.0.0.1:5000/logout" id="sair"><i class="fi fi-sr-exit"></i> Sair</a>
                     </div>
                 </div>
 
@@ -84,22 +84,24 @@
                                     <div id="lata-bg">
                                         <img src="{{ url_for('static', filename='img/' ~ item.produto.imagem) }}" alt="{{ item.produto.nome }}" id="bag-img">
                                     </div>
-                                    <h4>{{ item.produto.nome }}</h4>
-                                    <span>Unidades: {{ item.quantidade }}</span>
-                                    <h4>R${{ item.produto.preco_unitario }}</h4>
-                                    <h4>Subtotal: R${{ item.quantidade * item.produto.preco_unitario }}</h4>
-                                
+                                    <div id="info-prod">
+                                        <h4>{{ item.produto.nome }}</h4>
+                                        <span>Unidades: {{ item.quantidade }}</span> 
+                                        <br>
+                                        <h4>R${{ item.produto.preco_unitario }}</h4>
+                                    </div>
+                                    
                                     <form action="{{ url_for('deletar_item_route', id_item=item.id_item) }}" method="post">
                                         <button type="submit" class="btn-delete">
                                             <i class="fi fi-rr-trash"></i>
                                         </button>
                                     </form>
                                 </div>
+                                <h4>Subtotal: R${{ item.quantidade * item.produto.preco_unitario }}</h4> <br>
                             {% endfor %}
                         {% else %}
                             <p>Seu carrinho está vazio.</p>
                         {% endif %}
-
                         <button id="bag-buy-btn">
                             <a href="#">Finalizar Compra</a>
                         </button>
@@ -126,19 +128,24 @@
                 </div>
                 
                 <div class="product-info">
-                
-                    <h2>{{ produto.nome if produto is defined else "Produto Indisponível" }}</h2>
-                    <p>{{ produto.descricao if produto is defined else "Indisponível" }}</p>
-                    <span class="price">
-                        R$ {{ produto.preco_unitario if produto is defined else "Indisponível" }}
-                    </span>
+                    <div id="infos">
+                        <h2>{{ produto.nome if produto is defined else "Produto Indisponível" }}</h2>
+                        <p>{{ produto.descricao if produto is defined else "Indisponível" }}</p>
+                        <span class="price">
+                            R$ {{ produto.preco_unitario if produto is defined else "Indisponível" }}
+                        </span>
+                    </div>
                 
                     <form action="{{ url_for('criar_pedido') }}" method="POST">
                         <input type="hidden" name="usuario_id" value="{{ current_user.id_usuario if current_user.is_authenticated else '' }}">
                         <input type="hidden" name="produto_id[]" value="{{ produto.id_produto if produto is defined else 0 }}">
                     
-                        <label>Quantidade:</label>
-                        <input type="number" name="quantidade[]" value="1" min="1" required>
+                        <span>Quantidade</span>
+                        <div class="container-quantity">
+                            <button type="button" class="quantity-btn" id="diminuir">−</button>
+                            <input type="number" id="quantity" name="quantidade[]" value="1" min="1" required>
+                            <button type="button" class="quantity-btn" id="aumentar">+</button>
+                        </div>
 
                         {% if current_user.is_authenticated %}
                         <button type="submit" id="buy-btn">Comprar</button>
